Replace `width` with `min-width` to prevent wrapping menu labels

--- a/src/react-menu/style.sass
+++ b/src/react-menu/style.sass
@@ -6,7 +6,7 @@
   top: 0
   position: fixed
   padding: 10px
-  width: $width
+  min-width: $width
   margin-top: -20px
   margin-left: -$width/2
   .item
@@ -21,6 +21,6 @@
       position: absolute
       top: 0
       left: 100%
-      width: $width
+      min-width: $width
       .subitem
         @extend .item
